--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,8 @@
+#[submodule "themes/docsy"]
+#	path = themes/docsy
+#	url = https://github.com/google/docsy
 
-[submodule "themes/docsy"]
-	path = themes/docsy
-	url = https://github.com/google/docsy
+
+[submodule "themes/adtopy"]
+	path = themes/adtopy
+	url = git://https://github.com/frodriguezsmartclip/docs-adtopy
