--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ title = "Help Adtoyp # SmartClip"
 enableRobotsTXT = true
 
 # Hugo allows theme composition (and inheritance). The precedence is from left to right.
-theme = ["adtopy"]
+theme = ["docsy"]
 
 enableEmoji = true
 
