--- a/config.toml
+++ b/config.toml
@@ -132,7 +132,7 @@ no = 'Lo sentimos. Por favor, cuéntanos <a href="https://github.com/frodriguezs
 # End user relevant links. These will show up on left side of footer and in the community page if you have one.
 [[params.links.user]]
 	name ="Twitter"
-	url = "https://twitter.com/smartclipAG"
+	url = "https://twitter.com/smartclipES"
 	icon = "fab fa-twitter"
 	desc = "Follow us on Twitter to get the latest news!"
 [[params.links.user]]
