--- a/config.toml
+++ b/config.toml
@@ -20,25 +20,9 @@ enableMissingTranslationPlaceholders = true
 
 disableKinds = ["taxonomy", "taxonomyTerm"]
 
-# Highlighting config
-pygmentsCodeFences = true
-pygmentsUseClasses = true
-# Use the new Chroma Go highlighter in Hugo.
-#pygmentsUseClassic = true
-#pygmentsOptions = "linenos=inline"
-# See https://help.farbox.com/pygments.html
-pygmentsStyle = "tango"
-
 # Configure how URLs look like per section.
 [permalinks]
 blog = "/:section/:year/:month/:day/:slug/"
-
-## Configuration for BlackFriday markdown parser: https://github.com/russross/blackfriday
-[blackfriday]
-plainIDAnchors = true
-hrefTargetBlank = true
-angledQuotes = false
-latexDashes = true
 
 # Image processing configuration.
 [imaging]
@@ -66,11 +50,6 @@ description = "Documetacion relacionado con Adtopy (Smartclip)"
 languageName ="Español"
 weight = 1
 
-
-[markup]
-  [markup.goldmark]
-    [markup.goldmark.renderer]
-      unsafe = true
 
 # Everything below this are Site Params
 
@@ -147,3 +126,23 @@ no = 'Lo sentimos. Por favor, cuéntanos <a href="https://github.com/frodriguezs
 	url = "https://github.com/frodriguezsmartclip/docs-adtopy"
 	icon = "fab fa-github"
 	desc = "Development takes place here!"
+
+# Deshabilitado el markup de Goldmark de Hugo y el antiguo chroma + blackfriday
+# Configuracion del config.toml aqui: https://gohugo.io/getting-started/configuration-markup/#configure-markup
+# TODO: Eliminar cosas innecesarias del config.toml
+
+# Highlighting config
+#pygmentsCodeFences = true
+#pygmentsUseClasses = true
+# Use the new Chroma Go highlighter in Hugo.
+#pygmentsUseClassic = true
+#pygmentsOptions = "linenos=inline"
+# See https://help.farbox.com/pygments.html
+#pygmentsStyle = "tango"
+
+## Configuration for BlackFriday markdown parser: https://github.com/russross/blackfriday
+# [blackfriday]
+#plainIDAnchors = true
+#hrefTargetBlank = true
+#angledQuotes = false
+#latexDashes = true
