--- a/config.toml
+++ b/config.toml
@@ -107,6 +107,13 @@ enable = true
 yes = '¡Genial! Nos alegramos. No obstante, estamos abiertos a escuchar nuevas mejoras. ¿Tienes alguna? <a href="https://github.com/frodriguezsmartclip/docs-adtopy/issues/new">Cuéntanos cómo podríamos mejorar.</a> Gracias! :)'
 no = 'Lo sentimos. Por favor, cuéntanos <a href="https://github.com/frodriguezsmartclip/docs-adtopy/issues/new">cómo poder mejorar esta documentación</a>. Gracias!'
 
+# Adds a reading time to the top of each doc.
+# If you want this feature, but occasionally need to remove the Reading time from a single page, 
+# add "hide_readingtime: true" to the page's front matter
+# related commit: https://github.com/google/docsy/issues/122#issuecomment-588128070
+[params.ui.readingtime]
+enable = true
+
 [params.links]
 # End user relevant links. These will show up on left side of footer and in the community page if you have one.
 [[params.links.user]]
