--- a/config.toml
+++ b/config.toml
@@ -132,11 +132,11 @@ enable = true
 	desc = "Follow us on LinkedIn to get the latest news!"
 
 # Developer relevant links. These will show up on right side of footer and in the community page if you have one.
-[[params.links.developer]]
-	name = "GitHub"
-	url = "https://github.com/frodriguezsmartclip/docs-adtopy"
-	icon = "fab fa-github"
-	desc = "Development takes place here!"
+# [[params.links.developer]]
+# 	name = "GitHub"
+# 	url = "https://github.com/frodriguezsmartclip/docs-adtopy"
+# 	icon = "fab fa-github"
+# 	desc = "Development takes place here!"
 
 # Deshabilitado el markup de Goldmark de Hugo y el antiguo chroma + blackfriday
 # Configuracion del config.toml aqui: https://gohugo.io/getting-started/configuration-markup/#configure-markup
